--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 hello2019J-bar.tar filter=lfs diff=lfs merge=lfs -text
 ubuntu-bar.tar filter=lfs diff=lfs merge=lfs -text
+2019Jhello.tar filter=lfs diff=lfs merge=lfs -text
